# incubator

./: .env.example  .gitignore  FEATURES.md  README.md  pyproject.toml  registry.yaml
blackboard/ideas/_template/: competitive-analysis.md  feasibility.md  idea.md  implementation-log.md  mvp-spec.md  release-plan.md  validation-report.md
docs/: agents.md  architecture.md  pipelines.md  self-hosting.md  troubleshooting.md
incubator/: cli.py  config.py
incubator/agents/ideation/: agent.py
incubator/agents/implementation/: agent.py
incubator/agents/release/: agent.py
incubator/agents/validation/: agent.py
incubator/agents/watchers/: competitive.py
incubator/comms/: notifications.py  telegram.py
incubator/core/: agent.py  agent_factory.py  blackboard.py  lock.py  registry.py
incubator/defaults/: global-system-prompt.md  registry.yaml
incubator/defaults/agents/watchers/: research.py
incubator/orchestrator/: evolution.py  job_queue.py  orchestrator.py  pool.py  scheduler.py  worker.py
incubator/tools/: blackboard_tools.py  evolution_tools.py  telegram_tools.py
incubator/web/api/: app.py  websocket.py
incubator/web/api/routes/: activity.py  agents.py  costs.py  evolution.py  ideas.py  pool.py
incubator/web/frontend/templates/: activity.html  agent_detail.html  agents.html  base.html  costs.html  evolution.html  home.html  idea_detail.html  pool.html
specs/: pool_scheduler.cfg  pool_scheduler.tla
tests/: conftest.py  test_agent_deadline.py  test_blackboard.py  test_browser.py  test_browser_custom_stages.py  test_chaos.py  test_cli_pool.py  test_config.py  test_delete_and_broadcast_edges.py  test_e2e_web_pipeline.py  test_failed_role_retry.py  test_handler_retry.py  test_handlers.py  test_human_k8s_handlers.py  test_lock.py  test_phase.py  test_pipeline_config.py  test_pipeline_migration.py  test_pool.py  test_pool_bugs.py  test_projection.py  test_registry.py  test_scheduler_primitives.py  test_scheduling.py  test_script_webhook_handlers.py  test_settings_quality_gate.py  test_snapshot.py  test_watchers.py  test_worker.py
tests/infra/: kind-config.yaml  setup-chaos.sh  surrealdb.yaml
trellis/: cli.py  config.py  otel.py
trellis/core/: agent.py  audit.py  blackboard.py  pipeline.py  projection.py  registry.py  sandbox.py  snapshot.py
trellis/core/handlers/: __init__.py
trellis/orchestrator/: evolution.py  pool.py  worker.py
trellis/web/api/: app.py  websocket.py
trellis/web/api/routes/: agents.py  evolution.py  (+5 more)
(+16 files in other folders)
