[project]
name = "trellis"
version = "1.3.1"
description = "Agentic pipeline platform — design agent teams that take ideas from concept to launch"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "nono-py",
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.0",
    "croniter",
    "typer[all]",
    "pyyaml",
    "lark>=1.1",
    "rich",
    "watchfiles",
    "gitpython",
    "fastapi<1.0",
    "starlette<1.0",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "websockets",
    "markdown",
    "anthropic",
    "surrealdb",
    "httpx>=0.27",
    "cryptography>=41.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pre-commit",
    "playwright",
]
# [spiffe] extra removed: pyspiffe is not published on PyPI under that name.
# The optional pyspiffe code path in trellis/core/identity/provider.py is
# guarded by try/except ImportError and falls back to a direct HTTP call
# against the Workload API, so removing the extra does not change runtime
# behaviour. Users who want the gRPC client can install pyspiffe from
# https://github.com/HewlettPackard/py-spiffe directly.

[project.scripts]
trellis = "trellis.cli:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trellis*"]

[tool.setuptools.package-data]
trellis = [
    "defaults/**/*",
    "defaults/**/*.prose",
    "defaults/**/.*",
    "web/frontend/templates/**/*",
    "web/frontend/static/**/*",
    "nono-wrapper.sh",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests (no IO, no network)",
    "integration: tests that touch the config filesystem or ASGI app",
    "e2e: full route round-trips through the ASGI app",
    "smoke: quick sanity checks (template parsing, import verification)",
    "regression: tests that guard against specific past bugs",
    "browser: Playwright browser tests (run with --browser flag)",
    "slow: stress/soak tests that take >30 seconds",
    "chaos: tests requiring kind cluster + Docker",
]

[tool.ruff]
line-length = 100
